--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.mvc.locale-resolver=fixed
 spring.messages.basename=messages
 spring.messages.encoding=UTF-8
 spring.messages.fallback-to-system-locale=true
+
+server.servlet.session.cookie.name=SITEDERENCONTRE-DATING
